--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "http",
         "api"
     ],
+    "minimum-stability": "stable",
     "homepage": "https://github.com/sylouuu/php-rest-client",
     "license": "MIT",
     "support": {
