--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ php:
     - 5.5
     - 5.4
     - hhvm
+
+before_script:
+    - composer self-update
+    - composer install --prefer-source --no-interaction --dev
