--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ php:
 before_script:
     - composer self-update
     - composer install --prefer-source --no-interaction --dev
+    - npm install
+
+script:
+    - gulp
