--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-    backupGlobals="false"
-    backupStaticAttributes="false"
-    colors="true"
-    convertErrorsToExceptions="true"
-    convertNoticesToExceptions="true"
-    convertWarningsToExceptions="true"
-    processIsolation="false"
-    stopOnFailure="false"
-    syntaxCheck="true"
->
+<phpunit colors="true">
     <testsuites>
         <testsuite name="RESTClient Test Suite">
             <file>./RESTClientTest.php</file>
         </testsuite>
     </testsuites>
-
 </phpunit>
