updated travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ php:
 
 before_script:
     - composer self-update
-    - composer install --prefer-source --no-interaction --dev
-    - npm install
+    - composer install
 
 script:
-    - gulp
+    - phpunit
 
 notifications:
     email: false
