--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,23 @@
 {
-    "name": "sylouuu/php-rest-client",
+    "name": "sylouuu/php-curl",
     "description": "Lightweight PHP cURL wrapper",
     "type": "library",
-    "keywords": [
-        "rest",
-        "http",
-        "api"
-    ],
+    "keywords": ["curl", "http"],
     "minimum-stability": "stable",
-    "homepage": "https://github.com/sylouuu/php-rest-client",
+    "homepage": "https://github.com/sylouuu/php-curl",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/sylouuu/php-rest-client/issues"
+        "issues": "https://github.com/sylouuu/php-curl/issues"
     },
     "require": {
+        "php": ">5.3.0"
+    },
+    "require-dev": {
         "phpunit/phpunit": "4.0.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "sylouuu\\Curl": "src/"
+        }
     }
 }
