--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "phpunit/phpunit": "4.0.*"
     },
     "autoload": {
-        "psr-0": {
-            "sylouuu\\Curl": "src/"
+        "psr-4": {
+            "sylouuu\\Curl\\": "src/"
         }
     }
 }
